--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Zhang"
-  avatar           : "profile.png"
+  avatar           : "Yu Zhang.jpg"
   bio              : "Professor of Bioengineering and Electrical and Computer Engineering at Lehigh University"
   location         : "Pennsylvania, USA"
   employer         :
